<resources>
    <string name="app_name">TripTrip Mobile App</string>
    <string name="app_title">TripTrip</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="register">Register</string>
    <string name="register_accnt">Register Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="no_accnt">No Account?</string>
    <string name="view_profile">View Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_trip">Edit Trip</string>

    <string name="no_trips">You have no trips planned yet.</string>

    <string name="start_location">Start Location</string>
    <string name="end_location">End Location</string>
    <string name="description">Description</string>

    <string name="input_name">Name</string>
    <string name="input_birthday">Birthday</string>
    <string name="input_email">E-mail</string>
    <string name="input_password">Password</string>
    <string name="input_new_password">New Password</string>
    <string name="input_confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="delete_profile">Delete Profile</string>

    <string name="sort_trips_by">Sort trips by:</string>
    <string name="select_date">Select Date</string>

    <string name="enter_title">Enter Trip Title</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="enter_start_location">Enter Start Location</string>
    <string name="enter_end_location">Enter End Location</string>
    <string name="select_trip_type">Select Trip Type:</string>
    <string name="enter_description">Enter Trip Description (Optional)</string>
    <string name="add_trip_image">Add Trip Image (Optional)</string>
    <string name="enter_create_trip">Create Trip</string>
    <string name="delete_trip">Delete Trip</string>

    <string name="enter_new_password">Enter your new password:</string>
    <string name="enter_verify">Enter your birthday and email for verification:</string>
    <string name="verify">Verify</string>

    <!--  options for dropdown menu  -->
    <string-array name="sort_options">
        <item>Start Date</item>
        <item>End Date</item>
        <item>Start Location</item>
        <item>End Location</item>
    </string-array>

    <string-array name="type_options">
        <item>Single Trip</item>
        <item>Round Trip</item>
    </string-array>
</resources>