<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTripActivity">

    <ImageView
        android:id="@+id/iv_edit_trip_mountains"
        android:layout_width="1666dp"
        android:layout_height="1468dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633"
        app:srcCompat="@drawable/mountains" />

    <TextView
        android:id="@+id/tv_edit_trip_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/menu_blue"
        android:backgroundTint="@color/menu_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <RelativeLayout
        android:id="@+id/rl_edit_dropdown_container"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:background="@color/menu_blue"
        app:layout_constraintEnd_toEndOf="@+id/et_edit_description"
        app:layout_constraintStart_toStartOf="@+id/et_edit_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_type_label">>

        <Spinner
            android:id="@+id/dropdown_edit_trip_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:backgroundTint="@color/white"
            android:prompt="@string/select_trip_type"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></Spinner>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_edit_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/select_trip_type"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/rl_edit_dropdown_container"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rl_edit_dropdown_container"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_end_location" />

    <EditText
        android:id="@+id/et_edit_start_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FFFFFF"
        android:editable="false"
        android:ems="10"
        android:hint="@string/select_start_date"
        android:inputType="none"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_gray"
        app:layout_constraintEnd_toEndOf="@+id/et_edit_trip_title"
        app:layout_constraintStart_toStartOf="@+id/et_edit_trip_title"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_trip_title" />

    <EditText
        android:id="@+id/et_edit_end_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="#FFFFFF"
        android:editable="false"
        android:ems="10"
        android:hint="@string/select_end_date"
        android:inputType="none"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_gray"
        app:layout_constraintEnd_toEndOf="@+id/et_edit_start_date"
        app:layout_constraintStart_toStartOf="@+id/et_edit_start_date"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_start_date" />

    <EditText
        android:id="@+id/et_edit_trip_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/enter_title"
        android:inputType="text"
        android:maxLength="20"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_gray"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_edit_trip_bg" />

    <EditText
        android:id="@+id/et_edit_start_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/enter_start_location"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_gray"
        app:layout_constraintEnd_toEndOf="@+id/et_edit_end_date"
        app:layout_constraintStart_toStartOf="@+id/et_edit_end_date"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_end_date" />

    <EditText
        android:id="@+id/et_edit_end_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/enter_end_location"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_gray"
        app:layout_constraintEnd_toEndOf="@+id/et_edit_start_location"
        app:layout_constraintStart_toStartOf="@+id/et_edit_start_location"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_start_location" />

    <EditText
        android:id="@+id/et_edit_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/enter_description"
        android:inputType="textLongMessage"
        android:maxLength="50"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_gray"
        app:layout_constraintEnd_toEndOf="@+id/et_edit_start_location"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_edit_start_location"
        app:layout_constraintTop_toBottomOf="@+id/rl_edit_dropdown_container" />

    <Button
        android:id="@+id/btn_edit_trip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/yellow_green"
        android:text="@string/save"
        android:textColor="@color/btn_text_blue"
        app:layout_constraintBottom_toBottomOf="@+id/tv_edit_trip_bg"
        app:layout_constraintEnd_toEndOf="@+id/et_edit_end_location"
        app:layout_constraintStart_toStartOf="@+id/et_edit_end_location"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_description"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/btn_edit_trip_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/delete_red"
        android:text="@string/delete_trip"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tv_edit_trip_bg"
        app:layout_constraintEnd_toEndOf="@+id/et_edit_end_location"
        app:layout_constraintStart_toStartOf="@+id/et_edit_end_location"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_trip"
        app:layout_constraintVertical_bias="0.15" />

</androidx.constraintlayout.widget.ConstraintLayout>