<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:backgroundTint="#00FFFFFF"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/iv_login_mountains"
        android:layout_width="1666dp"
        android:layout_height="1468dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396"
        app:srcCompat="@drawable/mountains" />

    <TextView
        android:id="@+id/tv_login_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/trip_box"
        android:backgroundTint="@color/menu_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407" />

    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="#B1B1B1"
        app:layout_constraintEnd_toEndOf="@+id/tv_app_title"
        app:layout_constraintStart_toStartOf="@+id/tv_app_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_title" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/et_login_email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_login_email"
        app:layout_constraintTop_toBottomOf="@+id/et_login_email" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#D9FA7F"
        android:text="@string/login"
        android:textColor="#1B546E"
        app:layout_constraintEnd_toEndOf="@+id/et_login_password"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/et_login_password"
        app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

    <Button
        android:id="@+id/btn_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#00FFFFFF"
        android:foreground="?selectableItemBackgroundBorderless"
        android:foregroundTint="#D9FA7F"
        android:text="@string/forgot_password"
        android:textColor="#1384C1"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <Button
        android:id="@+id/btn_register_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:foreground="?selectableItemBackgroundBorderless"
        android:foregroundTint="#B2FFFFFF"
        android:text="@string/register_accnt"
        android:textColor="#D9FA7F"
        app:layout_constraintEnd_toEndOf="@+id/tv_no_accnt"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/tv_no_accnt"
        app:layout_constraintTop_toBottomOf="@+id/tv_no_accnt" />

    <TextView
        android:id="@+id/tv_login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:text="@string/input_email"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/et_login_email"
        app:layout_constraintEnd_toEndOf="@+id/et_login_email"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="@+id/et_login_email" />

    <TextView
        android:id="@+id/tv_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_password"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/et_login_password"
        app:layout_constraintEnd_toEndOf="@+id/et_login_password"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="@+id/et_login_password" />

    <TextView
        android:id="@+id/tv_no_accnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/white"
        android:text="@string/no_accnt"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btn_forgot_password"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_forgot_password"
        app:layout_constraintTop_toBottomOf="@+id/btn_forgot_password" />

    <TextView
        android:id="@+id/tv_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/app_title"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>