<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mountains"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/iv_edit_mountains"
        android:layout_width="1666dp"
        android:layout_height="1468dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377"
        app:srcCompat="@drawable/mountains" />

    <TextView
        android:id="@+id/tv_edit_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/menu_black"
        android:backgroundTint="@color/menu_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/et_edit_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/et_edit_password"
        app:layout_constraintStart_toStartOf="@+id/et_edit_password"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_password" />

    <TextView
        android:id="@+id/tv_edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:text="@string/input_password"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/et_edit_password"
        app:layout_constraintEnd_toEndOf="@+id/et_edit_password"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="@+id/et_edit_password" />

    <EditText
        android:id="@+id/et_edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/et_edit_name"
        app:layout_constraintStart_toStartOf="@+id/et_edit_name"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_name" />

    <TextView
        android:id="@+id/tv_edit_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:text="@string/input_confirm_password"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/et_edit_confirm_password"
        app:layout_constraintEnd_toEndOf="@+id/et_edit_confirm_password"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="@+id/et_edit_confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_password"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:text="@string/input_name"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/et_edit_name"
        app:layout_constraintEnd_toEndOf="@+id/et_edit_name"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="@+id/et_edit_name" />

    <EditText
        android:id="@+id/et_edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_gray"
        app:layout_constraintEnd_toEndOf="@+id/tv_edit_bg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_edit_bg"
        app:layout_constraintTop_toTopOf="@+id/tv_edit_bg" />

    <Button
        android:id="@+id/btn_edit_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:text="@string/save"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_edit_confirm_password"
        app:layout_constraintStart_toStartOf="@+id/et_edit_confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_confirm_password"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_edit_profile_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/delete_red"
        android:text="@string/delete_profile"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_edit_confirm_password"
        app:layout_constraintStart_toStartOf="@+id/et_edit_confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_profile"
        app:layout_constraintVertical_bias="0.15" />
</androidx.constraintlayout.widget.ConstraintLayout>