<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mountains"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/iv_newPsword_mountains"
        android:layout_width="1666dp"
        android:layout_height="1468dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377"
        app:srcCompat="@drawable/mountains" />

    <TextView
        android:id="@+id/tv_newPsword_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/menu_black"
        android:backgroundTint="@color/menu_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/et_newPsword_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/et_newPsword_password"
        app:layout_constraintStart_toStartOf="@+id/et_newPsword_password"
        app:layout_constraintTop_toBottomOf="@+id/et_newPsword_password" />

    <TextView
        android:id="@+id/tv_newPsword_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:text="@string/enter_new_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_newPsword_password"
        app:layout_constraintEnd_toEndOf="@+id/et_newPsword_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_newPsword_password" />

    <EditText
        android:id="@+id/et_newPsword_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_newPsword_bg" />

    <TextView
        android:id="@+id/tv_newPsword_confirm_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:text="@string/input_confirm_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_newPsword_confirm_password"
        app:layout_constraintEnd_toEndOf="@+id/et_newPsword_confirm_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_newPsword_confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/et_newPsword_password"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_newPsword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:text="@string/save"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_newPsword_confirm_password"
        app:layout_constraintStart_toStartOf="@+id/et_newPsword_confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/et_newPsword_confirm_password"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>